---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/nested_if.arc
---
fun test() {
    let a_i32: i32 = 65 in
    let b_i32: i32 = 66 in
    let c_i32: i32 = 67 in
    let true_bool: bool = true in
    let false_bool: bool = false in
    if true_bool {
        a_i32
    } else {
        if false_bool {
            b_i32
        } else {
            c_i32
        }
    }
}

